[gd_scene format=3 uid="uid://omqusqkky5ti"]

[ext_resource type="Script" uid="uid://j5cotml288fn" path="res://addons/DialogueSystem/ui/DescisionBox/DecisionBox.gd" id="1_3lveg"]
[ext_resource type="Texture2D" uid="uid://dj02lwf6l4f2e" path="res://assets/image/Characters/Chavala.png" id="2_gh3ow"]

[node name="DecisionBox" type="Control" unique_id=611704795]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_3lveg")

[node name="CharacterSprite" type="TextureRect" parent="." unique_id=1912043666]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -407.0
offset_top = -465.0
offset_right = 48.0
offset_bottom = -21.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("2_gh3ow")

[node name="Panel" type="Panel" parent="." unique_id=922935107]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -446.0
offset_top = -198.0
offset_right = -48.0
offset_bottom = -38.5
grow_horizontal = 0
grow_vertical = 0

[node name="LabelCharacter" type="Label" parent="Panel" unique_id=1019314345]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Character_name"

[node name="LabelQuestion" type="RichTextLabel" parent="Panel" unique_id=407567711]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 28.0
offset_bottom = -82.5
grow_horizontal = 2
grow_vertical = 2
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sem metus, varius vel fermentum at, vestibulum rhoncus risus. Vivamus ex tellus, congue eu condimentum in, euismod at ligula. Pellentesque iaculis enim sed elementum rhoncus. Praesent dapibus varius vulputate. Cras elementum dictum arcu. Maecenas vitae diam venenatis, dignissim odio ut, volutpat ante. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis lectus mi, volutpat ac enim vitae, egestas vestibulum velit."

[node name="OptionsContainer" type="VBoxContainer" parent="Panel" unique_id=1244514026]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="AudioPlayer" type="AudioStreamPlayer" parent="." unique_id=59652259]
